Fix navbar overflow

--- a/src/components/sidebar/Navbar.css
+++ b/src/components/sidebar/Navbar.css
@@ -1,5 +1,10 @@
 .navbar {
   flex: 1;
+  overflow: scroll;
+}
+
+.navbar::-webkit-scrollbar {
+  display: none;
 }
 
 .navbar > ul {
